--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <h1>Etch a sketch</h1>
-        <div id="container"></div>
+        <button id="btn">Change Size</button>
+        <div id="container">
+           
+        </div>
     </body>
     <script type="text/javascript" src="script.js"></script>
 </html>
